ingress/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: ingress-controller
  namespaces: ingress-space
spec:
  replicas: 1
  selector: 
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels: 
        name: nginx-ingress
    spec:
      serviceAccountName: ingress-serviceaccount
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
        args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
        - --default-backend-service=app-space/default-http-backend
        end:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom: 
            fieldRef:
              fieldPath: metadata.namespace
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
